feat metiendo html y algo scss

--- a/index.html
+++ b/index.html
@@ -11,7 +11,45 @@
     <title>JUEGO POKEMON</title>
   </head>
   <body>
-    <div id="app"></div>
+    <main class="main-container">
+      <h1>Adivina el Pokemon</h1>
+      <div class="draggable-elements">
+        <div class="pokemon">
+          <img
+            class="image"
+            src="/assets/imagenes.jgp/Business-OpenAI-Dall-E-3-heart.webp"
+            alt="imagen"
+          />
+        </div>
+        <div class="pokemon">
+          <img
+            class="image"
+            src="/assets/imagenes.jgp/Business-OpenAI-Dall-E-3-heart.webp"
+            alt="imagen"
+          />
+        </div>
+        <div class="pokemon">
+          <img
+            class="image"
+            src="/assets/imagenes.jgp/Business-OpenAI-Dall-E-3-heart.webp"
+            alt="imagen"
+          />
+        </div>
+      </div>
+      <h2>Arrastra y Suelta</h2>
+      <div class="droppable-elements">
+        <div class="names">
+          <p>Uno</p>
+        </div>
+        <div class="names">
+          <p>Dos</p>
+        </div>
+        <div class="names">
+          <p>Tres</p>
+        </div>
+      </div>
+    </main>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
