feat drag and drop a la mitad y funciona

--- a/index.html
+++ b/index.html
@@ -37,19 +37,9 @@
         </div>
       </div>
       <h2>Arrastra y Suelta</h2>
-      <div class="droppable-elements">
-        <div class="names">
-          <p>Uno</p>
-        </div>
-        <div class="names">
-          <p>Dos</p>
-        </div>
-        <div class="names">
-          <p>Tres</p>
-        </div>
-      </div>
+      <div class="droppable-elements"></div>
     </main>
-
+    <p class="wrong"></p>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
