feat metiendo puntuaciones y localstore

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <div class="draggable-elements"></div>
         <h2>Arrastra y Suelta</h2>
         <div class="droppable-elements"></div>
+        <div class="score">Puntuación: 0</div>
+        <div class="highest-score">Mayor Puntuación: 0</div>
       </div>
     </main>
     <p class="wrong"></p>
