feat poniendo botones volver y empezar

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <div class="droppable-elements"></div>
         <div class="score">Puntuación: 0</div>
         <div class="highest-score">Mayor Puntuación: 0</div>
+        <div class="game-buttons">
+          <button id="play-again" class="jugarDeNuevo">Volver a jugar</button>
+          <button id="go-back" class="volver">Volver Menu</button>
+        </div>
       </div>
     </main>
     <p class="wrong"></p>
