--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
           <button id="go-back" class="volver">Volver Menu</button>
         </div>
       </div>
+      <div class="music-controls">
+        <button id="playPauseBtn">Play</button>
+        <input
+          type="range"
+          id="volumeControl"
+          min="0"
+          max="1"
+          step="0.1"
+          value="0.5"
+        />
+      </div>
     </main>
     <p class="wrong"></p>
     <script type="module" src="./main.js"></script>
